media: Add "Protected content" to PageInfo on Android

When the "Protected content" permission decision is different from the
default value, "Protected content" will show up in the PageInfo.

See screenshots at:
https://photos.app.goo.gl/Rmd5S75gTUNU7vZVA

Similar change on ChromeOS will be done in a separate CL.

Bug: 593210
Test: Manually tested. See screenshots linked above.
Change-Id: I87e7cda9b4e46b70e0410ec213b49590c8f5cd74
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1898611
Reviewed-by: Balazs Engedy <engedy@chromium.org>
Reviewed-by: Yaron Friedman <yfriedman@chromium.org>
Commit-Queue: Xiaohan Wang <xhwang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#713131}

Former-commit-id: 4640343fd2fbfe85c9334afa394d08efc75dbedb